# Building-RAG-Agentic-AI-Application

Agentic_AI/CrewAI/: 1_Agents Components - CrewAI.ipynb  2_Function Calling in CrewAI.ipynb
Agentic_AI/CrewAI/Crew-AI-YT-Video/: .gitignore  README.md  agents.py  crew.py  main.py  pyproject.toml  requirements.txt  tasks.py  tools.py
Agentic_AI/LangGraph/: 3_Compositional_Workflows_in_Langgraph.ipynb  Agents_Components_Langgraph.ipynb  Function_Calling_in_LangGraph.ipynb
CrewAI/: 1_Agents_Components_CrewAI.ipynb  2_Function_Calling_in_CrewAI.ipynb
Day_1/: prompt_engineering_fundamentals-groq_api.ipynb
Day_3/Memory_in_Agents/: Build a health fitness coach with langmem.ipynb  MeM0 + LangGraph Agent Integration.ipynb  recipe_assistant_agent_with_langmem.ipynb
Day_3_4/: Pydantic-AI-tutorial.ipynb
Day_3_4/AI_Guardrails/: Llama_Guard.ipynb  guradrails_notebook_final.ipynb  prompt_guard.ipynb
Day_5_6/UK_Carbon_Intensity_API_MCP/: client.py  server.py  (+1 more)
Guardrails/: guradrails_notebook_final.ipynb
MCP/: carbon_mcp_server.py  main.py  pyproject.toml
Prompt_Engineering/: Groq_Using_LLMs_for_Classification_Tasks.ipynb  Groq_Using_LLMs_for_Generation_Tasks.ipynb  prompt_engineering_fundamentals-gemini.ipynb  prompt_engineering_fundamentals_groq_api.ipynb
PydanticAI/: Pydantic_AI_tutorial (1).ipynb
Quantization/: Fine_tune_Gemma_models_With_Custom_Data_in_Keras_using_LoRA.ipynb
RAG/: CRUD_Operations_Creating_Vector_DB_all-mpnet-base-v2.ipynb  RAG_TESLAReports_all-mpnet-base-v2.ipynb
Risk_Security_Compliance/: LLMs - Security Risks and Mitigation (1).ipynb
(+6 files in other folders)
